--- a/src/main_screen.form
+++ b/src/main_screen.form
@@ -406,6 +406,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font style="3"/>
                   <foreground color="-1376769"/>
                   <horizontalAlignment value="0"/>
                   <horizontalTextPosition value="0"/>
