--- a/src/main_screen.form
+++ b/src/main_screen.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1109" height="571"/>
+      <xy x="20" y="20" width="619" height="542"/>
     </constraints>
     <properties>
       <preferredSize width="900" height="550"/>
@@ -297,7 +297,7 @@
                             </constraints>
                             <properties>
                               <background color="-1"/>
-                              <enabled value="false"/>
+                              <enabled value="true"/>
                             </properties>
                           </component>
                           <component id="b1a54" class="javax.swing.JLabel">
@@ -388,7 +388,12 @@
                 <children>
                   <component id="6dc41" class="javax.swing.JTable" binding="table1" default-binding="true">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <columnSelectionAllowed value="false"/>
+                      <enabled value="true"/>
+                      <rowHeight value="20"/>
+                      <rowMargin value="3"/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
@@ -424,8 +429,8 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="2d183" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="2d183" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="5" left="5" bottom="5" right="5"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -433,7 +438,36 @@
                   <background color="-15906432"/>
                 </properties>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <scrollpane id="fe99c">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="200" height="200"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="7694a" class="javax.swing.JTable" default-binding="true">
+                        <constraints/>
+                        <properties>
+                          <columnSelectionAllowed value="false"/>
+                          <enabled value="true"/>
+                          <rowHeight value="20"/>
+                          <rowMargin value="3"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
+                  <component id="a2f85" class="javax.swing.JButton" binding="button1" default-binding="true">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Button"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
             </children>
           </grid>
